--- a/client/src/styles/connect.css
+++ b/client/src/styles/connect.css
@@ -1,3 +1,20 @@
+.connect {
+    height: 95vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    background-color: #1f1f1f;
+    color: white;
+}
+
+.connect-content {
+    width: 75%;
+    height: 100%;
+    background-color: rgba(201, 201, 201, 0.055);
+}
+
 #user-modal {
     display: none;
 }
