--- a/client/src/styles/connect.css
+++ b/client/src/styles/connect.css
@@ -1,12 +1,12 @@
 .connect {
-    height: 95vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
     background-color: #1f1f1f;
     color: white;
+    overflow-x: hidden !important;
 }
 
 .connect-content {
@@ -17,4 +17,14 @@
 
 #user-modal {
     display: none;
+    position: absolute;
+    left: 20%;
+    top: 50%;
+    background-color: white;
+}
+
+.user-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
