--- a/client/src/styles/mycollection.css
+++ b/client/src/styles/mycollection.css
@@ -37,6 +37,7 @@
 .collections h1 {
     background-color: rgba(201, 201, 201, 0.055);
     padding-bottom: 15px;
+    padding-left: 5%;
 }
 
 .selected {
@@ -55,8 +56,29 @@
 
 .not-selected form {
     padding-top: 10px;
+    padding-left: 5%;
+}
+
+.collection-form {
+    padding-left: 5%;
 }
 
 .not-selected input {
     padding: 5px;
+}
+
+.mediaContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.mediaContainer:hover {
+    background-color: rgba(201, 201, 201, 0.055);
+    cursor: pointer;
+    border-radius: 4px;
 }
