--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -11,12 +11,14 @@
 
 .profile-content {
     width: 75%;
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* margin-top: 10px; */
     /* justify-content: center; */
     background-color: rgba(201, 201, 201, 0.055);
+    border-radius: 4px;
 }
 
 .profile-content h1 {
@@ -28,7 +30,84 @@
     width: 90%;
 }
 
+.profile-info .inputs {
+    margin-bottom: 10px;
+}
+
+.labels {
+    margin-bottom: 5px;
+}
+
+.profile-info input {
+    padding: 5px;
+    border-radius: 5px;
+    margin: 0;
+}
+
+.profile-info {
+    margin-bottom: 10px;
+}
+
 .follow-list {
     display: flex;
-    width: 100%;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.follower-box {
+    margin-right: 10px;
+    background-color: rgba(201, 201, 201, 0.178);
+    padding: 10px;
+    border-radius: 4px;
+    width: 8%;
+}
+
+.follower-box p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.following-box {
+    margin-right: 10px;
+    background-color: rgba(201, 201, 201, 0.178);
+    padding: 10px;
+    border-radius: 4px;
+    width: 8%;
+}
+
+.following-box p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.follow-modal {
+    position: absolute;
+    background-color: #1f1f1f;
+    width: 8%;
+    border-radius: 4px;
+}
+
+.follow-modal h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.follow-button {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.profile-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.user-info p {
+    margin-bottom: 10px;
 }
