--- a/client/src/styles/connect.css
+++ b/client/src/styles/connect.css
@@ -15,16 +15,79 @@
     background-color: rgba(201, 201, 201, 0.055);
 }
 
+.connect-content h1 {
+    margin-left: 5%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 #user-modal {
     display: none;
+    width: 100%;
+    height: 100%;
+    background-color: #1f1f1f;
+}
+
+.modal-size {
+    width: 80%;
+    left: 10%;
+    top: 10%;
     position: absolute;
-    left: 20%;
-    top: 50%;
-    background-color: white;
+    background-color: rgb(94, 94, 94);
+    border-radius: 4px;
+}
+
+.modal-btn {
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+.modal-img {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 5%;
+}
+
+#user-modal img {
+    width: 10%;
+    margin: 10px;
+}
+
+.modal-size .modal-title {
+    margin-left: 6%;
 }
 
 .user-box {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-left: 5%;
+    margin-right: 5%;
+    background-color: rgba(240, 248, 255, 0.075);
+    border-radius: 4px;
+    margin-bottom: 5px;
+}
+
+.connect-users {
+    margin: 8px;
+    width: 100%;
+}
+
+.user-box:hover {
+    background-color: rgba(201, 201, 201, 0.055);
+}
+
+.follow-btns {
+    display: flex;
+    align-items: center;
+    width: 9%;
+    margin-right: 10px;
 }
